<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dim_Gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:contextClickable="true"
    tools:context=".activitys.Account">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context="eletronico.caixa.caixaeletronico.Account"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contextClickable="true"        >

        // Layout Seven/Fifteen Days

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            tools:context="eletronico.caixa.caixaeletronico.Login">

            <Button
                android:id="@+id/sevDays_extract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="extractSevenDays"
                android:text="@string/sevenDays_button" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="extractFifteenDays"
                android:text="@string/fifteenDays_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_period"
                android:onClick="showHideLinearDateFilter"/>

            <LinearLayout
                android:id="@+id/date_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_date_textView"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_date_textView"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/from_date_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mask_date_editText"
                        android:background="@color/White"
                        android:textSize="15dp"
                        />

                    <EditText
                        android:id="@+id/to_date_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mask_date_editText"
                        android:background="@color/White"
                        android:textSize="15dp"
                        android:layout_marginLeft="43dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/dateFilter_ok_button"
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:hint="@string/dateFilter_ok_button"
                        android:textSize="5dp"
                        android:layout_gravity="right"
                        android:onClick="consultPeriodExtract"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        //Extract View
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/extractText_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dip"
                android:typeface="monospace" />
        </ScrollView>


    </LinearLayout>

</RelativeLayout>
