<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Dim_Gray"
    tools:context=".activitys.Login">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="eletronico.caixa.caixaeletronico.Login">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context="eletronico.caixa.caixaeletronico.Login">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/acc_message"/>

            <EditText
                android:id="@+id/acc_message"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textColor="@color/Black"
                android:singleLine="true"
                android:maxLength="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/agency_message"/>

            <EditText
                android:id="@+id/agency_message"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textColor="@color/Black"
                android:singleLine="true"
                android:maxLength="7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/pass_message"/>

            <EditText
                android:id="@+id/pass_message"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:textColor="@color/Black"
                android:singleLine="true"
                android:maxLength="4"
                android:inputType="numberPassword"/>

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context="eletronico.caixa.caixaeletronico.Login">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="acessAccount"
                android:text="@string/acess_button"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
